--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -68,8 +68,8 @@
                 <form id="regForm" action="">
                     <h2>Informacje o firmie</h2>
                     <div class="form-group">
-                        <label for="companyName" class="sr-only"></label>
-                        <input class="form-control" type="text" id="companyName" name="companyName" placeholder="Nazwa firmy">
+                        <label for="name" class="sr-only"></label>
+                        <input class="form-control" type="text" id="name" name="name" placeholder="Nazwa firmy">
                     </div>
                     <div class="form-group">
                         <label for="street" class="sr-only"></label>
@@ -80,8 +80,8 @@
                         <input class="form-control" type="text" id="city" name="city" placeholder="Miasto">
                     </div>
                     <div class="form-group">
-                        <label for="zip" class="sr-only"></label>
-                        <input class="form-control" type="text" id="zip" name="zip" placeholder="Kod pocztowy">
+                        <label for="postal_code" class="sr-only"></label>
+                        <input class="form-control" type="text" id="postal_code" name="postal_code" placeholder="Kod pocztowy">
                     </div>
                     <div class="form-group">
                         <label for="email" class="sr-only"></label>
@@ -105,27 +105,27 @@
                     </div>
                     <h2>Dane osobowe</h2>
                     <div class="form-group">
-                        <label for="myName" class="sr-only"></label>
-                        <input class="form-control" type="text" id="name" name="myName" placeholder="Imię">
+                        <label for="agent_firstname" class="sr-only"></label>
+                        <input class="form-control" type="text" id="agent_firstname" name="agent_firstname" placeholder="Imię">
                     </div>
                     <div class="form-group">
-                        <label for="surname" class="sr-only"></label>
-                        <input class="form-control" type="text" id="surname" name="surname" placeholder="Nazwisko">
+                        <label for="agent_lastname" class="sr-only"></label>
+                        <input class="form-control" type="text" id="agent_lastname" name="agent_lastname" placeholder="Nazwisko">
                     </div>
                     <div class="form-group">
-                        <label for="yourEmail" class="sr-only"></label>
-                        <input class="form-control" type="email" id="yourEmail" name="yourEmail" placeholder="Twój e-mail">
+                        <label for="agent_email" class="sr-only"></label>
+                        <input class="form-control" type="email" id="agent_emaill" name="agent_email" placeholder="Twój e-mail">
                     </div>
                     <div class="form-group">
-                        <label for="position" class="sr-only"></label>
-                        <input class="form-control" type="text" id="position" name="position" placeholder="Stanowisko">
+                        <label for="agent_position" class="sr-only"></label>
+                        <input class="form-control" type="text" id="agent_position" name="agent_position" placeholder="Stanowisko">
                     </div>
                     <h2>Hasło</h2>
                     <div class="form-group">
-                        <label for="regPassword" class="sr-only">
+                        <label for="pass" class="sr-only">
                     </label>
                         <div id="password-div">
-                            <input class="form-control" type="password" id="regPassword" name="regPassword" placeholder="Hasło">
+                            <input class="form-control" type="password" id="pass" name="pass" placeholder="Hasło">
                         </div>
                     </div>
                     <div class="form-group">
