--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -149,6 +149,7 @@
   <div class="double-bounce1"></div>
   <div class="double-bounce2"></div>
 </div></button>
+               <div id="ok_message"></div>
                 </form>
             </div>
             <div role="tabpanel" class="tab-pane" id="remind">
