--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -149,11 +149,11 @@
   <div class="double-bounce1"></div>
   <div class="double-bounce2"></div>
 </div></button>
-               <div id="ok_message"></div>
+               <div class="ok_message"></div>
                 </form>
             </div>
             <div role="tabpanel" class="tab-pane" id="remind">
-                <form action="">
+                <form id="remindForm" action="">
                     <h2>Nie pamiętasz hasła?</h2>
                     <div class="form-group">
                         <label for="emailName" class="sr-only"></label>
@@ -168,6 +168,7 @@
   <div class="double-bounce1"></div>
   <div class="double-bounce2"></div>
 </div></button>
+                   <div class="ok_message"></div>
                     <button type="button" class="btn btn-link btn-block" id="link-return">Powrót do strony logowania</button>
                 </form>
             </div>
