--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -160,7 +160,7 @@
                         <input class="form-control" type="email" id="emailName" placeholder="E-mail">
                     </div>
                     <div class="form-group">
-                        <div class="g-recaptcha" data-sitekey="6LdglUsUAAAAAAqoGUouNrKnxWcj94jL_5PzEJMv">
+                        <div class="g-recaptcha" id="captcha" data-sitekey="6LdglUsUAAAAAAqoGUouNrKnxWcj94jL_5PzEJMv">
                         </div>
                     </div>
                     <button type="submit" class="btn btn-default btn-lg btn-block" id="btn-rem"><span>WYŚLIJ</span>
