--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -156,8 +156,8 @@
                 <form id="remindForm" action="">
                     <h2>Nie pamiętasz hasła?</h2>
                     <div class="form-group">
-                        <label for="emailName" class="sr-only"></label>
-                        <input class="form-control" type="email" id="emailName" placeholder="E-mail">
+                        <label for="mail" class="sr-only"></label>
+                        <input class="form-control" name="mail" type="mail" id="mail" placeholder="E-mail">
                     </div>
                     <div class="form-group">
                         <div class="g-recaptcha" id="captcha" data-sitekey="6LdglUsUAAAAAAqoGUouNrKnxWcj94jL_5PzEJMv">
