--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -149,7 +149,7 @@
   <div class="double-bounce1"></div>
   <div class="double-bounce2"></div>
 </div></button>
-               <div class="ok_message"></div>
+               <div id="ok_message_reg"></div>
                 </form>
             </div>
             <div role="tabpanel" class="tab-pane" id="remind">
@@ -168,7 +168,7 @@
   <div class="double-bounce1"></div>
   <div class="double-bounce2"></div>
 </div></button>
-                   <div class="ok_message"></div>
+                   <div id="ok_message_rem"></div>
                     <button type="button" class="btn btn-link btn-block" id="link-return">Powrót do strony logowania</button>
                 </form>
             </div>
