--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -38,6 +38,7 @@
                             <input class="form-control input-lg" type="password" id="log-password" placeholder="Hasło">
                         </div>
                     </div>
+                    <input type="hidden" name="referrer" valu="/">
                     <button type="submit" class="btn btn-default btn-lg btn-block" id="btn-log">
                         <span>ZALOGUJ SIĘ</span>
                         <div class="spinner">
