--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -69,7 +69,7 @@
                         <input class="form-control" type="text" id="city" name="city" placeholder="Miasto">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" id="postal_code" name="postal_code" placeholder="Kod pocztowy">
+                        <input class="form-control" type="text" id="postal-code" name="postal_code" placeholder="Kod pocztowy">
                     </div>
                     <div class="form-group">
                         <input class="form-control" type="email" id="email" name="email" placeholder="E-mail">
@@ -88,16 +88,16 @@
                     </div>
                     <h2>Dane osobowe</h2>
                     <div class="form-group">
-                        <input class="form-control" type="text" id="agent_firstname" name="agent_firstname" placeholder="Imię">
+                        <input class="form-control" type="text" id="agent-firstname" name="agent_firstname" placeholder="Imię">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" id="agent_lastname" name="agent_lastname" placeholder="Nazwisko">
+                        <input class="form-control" type="text" id="agent-lastname" name="agent_lastname" placeholder="Nazwisko">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="email" id="agent_emaill" name="agent_email" placeholder="Twój e-mail">
+                        <input class="form-control" type="email" id="agent-emaill" name="agent_email" placeholder="Twój e-mail">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" id="agent_position" name="agent_position" placeholder="Stanowisko">
+                        <input class="form-control" type="text" id="agent-position" name="agent_position" placeholder="Stanowisko">
                     </div>
                     <h2>Hasło</h2>
                     <div class="form-group">
@@ -107,16 +107,16 @@
                     </div>
                     <div class="form-group">
                         <div class="checkbox">
-                            <label for="rule_1">
-                                <input type="checkbox" value=""  name="rule_1" id="rule_1">
+                            <label for="rule-1">
+                                <input type="checkbox" value=""  name="rule_1" id="rule-1">
                                     Wyrażam zgodę na przetwarzanie moich danych osobowych przekazanych w formularzu rejestracyjnym w celu świadczenia usług za pośrednictwem Serwisu.
                             </label>
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="checkbox">
-                            <label for="rule_2">
-                                <input type="checkbox" value=""  name="rule_2" id="rule_2">
+                            <label for="rule-2">
+                                <input type="checkbox" value=""  name="rule_2" id="rule-2">
                                     Wyrażam zgodę na przetwarzanie moich danych osobowych przekazanych w formularzu rejestracyjnym w celu świadczenia usług za pośrednictwem Serwisu.
                                 </label>
                         </div>
