--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -137,7 +137,7 @@
                 <form id="remind-form" action="">
                     <h2>Nie pamiętasz hasła?</h2>
                     <div class="form-group">
-                        <input class="form-control" name="mail" type="mail" id="mail" placeholder="E-mail">
+                        <input class="form-control input-lg" name="mail" type="mail" id="mail" placeholder="E-mail">
                     </div>
                     <div class="form-group">
                         <div class="g-recaptcha" id="captcha" data-sitekey="6LdglUsUAAAAAAqoGUouNrKnxWcj94jL_5PzEJMv">
