--- a/formularz-colorissimo/index.html
+++ b/formularz-colorissimo/index.html
@@ -31,14 +31,14 @@
             <div role="tabpanel" class="tab-pane active" id="log">
                 <form id="log-form">
                     <div class="form-group">
-                        <input class="form-control input-lg" type="text" id="user" placeholder="ID użytkownika">
+                        <input class="form-control input-lg" type="text" name="login" id="user" placeholder="ID użytkownika">
                     </div>
                     <div class="form-group">
                         <div id="password-div">
-                            <input class="form-control input-lg" type="password" id="log-password" placeholder="Hasło">
+                            <input class="form-control input-lg" type="password" name="pass" id="log-password" placeholder="Hasło">
                         </div>
                     </div>
-                    <input type="hidden" name="referrer" valu="/">
+                    <input type="hidden" name="referrer" value="/">
                     <button type="submit" class="btn btn-default btn-lg btn-block" id="btn-log">
                         <span>ZALOGUJ SIĘ</span>
                         <div class="spinner">
